--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                     <a href="gallery.html">Gallery</a>
                                 </li>
                                 <li class="menu-item-has-children">
-                                    <a href="#">CEO Message</a>
+                                    <a href="message-ceo.html">CEO Message</a>
                                 </li>
                             </ul>
                         </nav>
@@ -220,9 +220,9 @@
                                 </li>
 
                                 <li class="">
-                                    <a href="javascript:void(0)">CEO Message</a>
+                                    <a href="message-ceo.html">CEO Message</a>
                                 </li>
-                                
+
                             </ul>
                         </nav>
                     </div>
@@ -658,7 +658,8 @@
                         <div class="rs-about-wrapper">
                             <div class="rs-about-content-wrapper">
                                 <div class="rs-section-title-wrapper">
-                                    <span class="rs-section-subtitle has-theme-deep-blue justify-content-start">
+                                    <span class="rs-section-subtitle has-theme-deep-blue justify-content-start"
+                                        style="color: #9c0527;">
                                         About Industrie
                                     </span>
                                     <h2 class="rs-section-title rs-split-text-enable split-in-fade">Welcome To <br>
@@ -812,7 +813,7 @@
                 <div class="row  g-5 justify-content-center section-title-space align-items-center">
                     <div class="col-xl-7 col-lg-7 col-md-8 col-sm-10">
                         <div class="rs-section-title-wrapper text-center">
-                            <span class="rs-section-subtitle has-theme-deep-blue">
+                            <span class="rs-section-subtitle has-theme-deep-blue" style="color: #9c0527;">
                                 What We Do
                             </span>
                             <h2 class="rs-section-title rs-split-text-enable split-in-fade"><span
@@ -1028,7 +1029,8 @@
                 <div class="row  g-5 section-title-space align-items-end">
                     <div class="col-xl-6 col-lg-6">
                         <div class="rs-section-title-wrapper">
-                            <span class="rs-section-subtitle has-theme-deep-blue justify-content-start">
+                            <span class="rs-section-subtitle has-theme-deep-blue justify-content-start"
+                                style="color: #9c0527;">
                                 Our Work
                             </span>
                             <h2 class="rs-section-title"><span class="rs-theme-deep-blue">Manufactured</span> a premium
@@ -1302,7 +1304,7 @@
                     <div class="col-xl-6 col-lg-7">
                         <div class="rs-testimonial-wrapper rs-testimonial-two rs-swiper has-theme-deep-blue">
                             <div class="rs-section-title-wrapper section-title-space">
-                                <span class="rs-section-subtitle justify-content-start">
+                                <span class="rs-section-subtitle justify-content-start" style="color: #9c0527;">
                                     Testimonials
                                 </span>
                                 <h2 class="rs-section-title rs-split-text-enable split-in-fade">Customer Feedback</h2>
@@ -1429,6 +1431,19 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
+                            <div class="rs-section-title-wrapper text-center">
+                                <span class="rs-section-subtitle has-theme-orange">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="15" viewBox="0 0 11 15"
+                                        fill="none">
+                                        <path d="M3.14286 10L0 15L8.78104e-07 0L3.14286 5V10Z" fill="#990727"></path>
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M6.28571 10L3.14286 15L3.14286 10L4.71428 7.5L3.14286 5L3.14286 0L6.28571 5L6.28571 10ZM6.28571 10L7.85714 7.5L6.28571 5V0L11 7.5L6.28571 15V10Z"
+                                            fill="#990727"></path>
+                                    </svg>
+                                Client's Logo
+                                </span>
+                                <h2 class="rs-section-title rs-split-text-enable split-in-fade">Client Portfolio</h2>
+                            </div>
                             <div class="rs-brand-wrapper">
                                 <div class="swiper" data-clone-slides="false" data-loop="true" data-speed="1500"
                                     data-autoplay="false" data-dots-dynamic="false" data-center-mode="false"
@@ -1440,7 +1455,7 @@
                                             <div class="rs-brand-item">
                                                 <span class="rs-brand-shape"></span>
                                                 <div class="rs-brand-thumb">
-                                                    <img src="assets/images/brand/brand-thumb-41.png" alt="image">
+                                                    <img src="assets/images/mian/celiect-portfolio/allied-bank.png" alt="image">
                                                 </div>
                                             </div>
                                         </div>
@@ -1448,7 +1463,7 @@
                                             <div class="rs-brand-item">
                                                 <span class="rs-brand-shape"></span>
                                                 <div class="rs-brand-thumb">
-                                                    <img src="assets/images/brand/brand-thumb-42.png" alt="image">
+                                                    <img src="assets/images/mian/celiect-portfolio/aramco-logo.png" alt="image">
                                                 </div>
                                             </div>
                                         </div>
@@ -1456,7 +1471,7 @@
                                             <div class="rs-brand-item">
                                                 <span class="rs-brand-shape"></span>
                                                 <div class="rs-brand-thumb">
-                                                    <img src="assets/images/brand/brand-thumb-43.png" alt="image">
+                                                    <img src="assets/images/mian/celiect-portfolio/Army.png" alt="image">
                                                 </div>
                                             </div>
                                         </div>
@@ -1464,7 +1479,7 @@
                                             <div class="rs-brand-item">
                                                 <span class="rs-brand-shape"></span>
                                                 <div class="rs-brand-thumb">
-                                                    <img src="assets/images/brand/brand-thumb-44.png" alt="image">
+                                                    <img src="assets/images/mian/celiect-portfolio/Hamdard-uni.png" alt="image">
                                                 </div>
                                             </div>
                                         </div>
@@ -1472,7 +1487,7 @@
                                             <div class="rs-brand-item">
                                                 <span class="rs-brand-shape"></span>
                                                 <div class="rs-brand-thumb">
-                                                    <img src="assets/images/brand/brand-thumb-45.png" alt="image">
+                                                    <img src="assets/images/mian/celiect-portfolio/Interloop.png" alt="image">
                                                 </div>
                                             </div>
                                         </div>
@@ -1480,7 +1495,39 @@
                                             <div class="rs-brand-item">
                                                 <span class="rs-brand-shape"></span>
                                                 <div class="rs-brand-thumb">
-                                                    <img src="assets/images/brand/brand-thumb-46.png" alt="image">
+                                                    <img src="assets/images/mian/celiect-portfolio/Joiland.png" alt="image">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <div class="rs-brand-item">
+                                                <span class="rs-brand-shape"></span>
+                                                <div class="rs-brand-thumb">
+                                                    <img src="assets/images/mian/celiect-portfolio/kims.png" alt="image">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <div class="rs-brand-item">
+                                                <span class="rs-brand-shape"></span>
+                                                <div class="rs-brand-thumb">
+                                                    <img src="assets/images/mian/celiect-portfolio/oil&gass.png" alt="image">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <div class="rs-brand-item">
+                                                <span class="rs-brand-shape"></span>
+                                                <div class="rs-brand-thumb">
+                                                    <img src="assets/images/mian/celiect-portfolio/Parco.png" alt="image">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <div class="rs-brand-item">
+                                                <span class="rs-brand-shape"></span>
+                                                <div class="rs-brand-thumb">
+                                                    <img src="assets/images/mian/celiect-portfolio/University.png" alt="image">
                                                 </div>
                                             </div>
                                         </div>
@@ -1501,7 +1548,8 @@
                         <div class="row align-items-center">
                             <div class="col-xl-5 col-lg-5">
                                 <div class="rs-cta-thumb">
-                                    <img src="assets/images/mian/man.png" style="height: 300px; width: 200px;" alt="image">
+                                    <img src="assets/images/mian/man.png" style="height: 300px; width: 200px;"
+                                        alt="image">
                                 </div>
                             </div>
                             <div class="col-xl-7 col-lg-7">
@@ -1587,7 +1635,8 @@
                                 <div class="rs-footer-widget-content">
                                     <div class="rs-footer-widget-meta">
                                         <div class="rs-footer-widget-address">
-                                            <a target="_blank" href="https://www.google.com/maps">Kalyal Near Gulshan Abad Gate, Adyala Road, Rawalpindi</a>
+                                            <a target="_blank" href="https://www.google.com/maps">Kalyal Near Gulshan
+                                                Abad Gate, Adyala Road, Rawalpindi</a>
                                         </div>
                                         <h5 class="rs-footer-widget-title">Email Address</h5>
                                         <p> Interested in working with us?</p>
@@ -1645,6 +1694,28 @@
         </div>
     </footer>
     <!-- footer area end -->
+
+
+    <div class="social-sidebar">
+        <a href="https://www.instagram.com/your_username" target="_blank" class="social-icon instagram">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.facebook.com/WainceTensile/" target="_blank" class="social-icon facebook">
+            <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.youtube.com/@your_channel" target="_blank" class="social-icon youtube">
+            <i class="fab fa-youtube"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/your_profile" target="_blank" class="social-icon linkedin">
+            <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="mailto:info@wainstensile.com" class="social-icon email">
+            <i class="fas fa-envelope"></i>
+        </a>
+        <a href="https://wa.me/923455715686" target="_blank" class="social-icon whatsapp">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+    </div>
 
     <!-- back to top -->
     <!-- Backtotop start -->
