--- a/about-us.html
+++ b/about-us.html
@@ -109,7 +109,7 @@
                                     <a href="gallery.html">Gallery</a>
                                 </li>
                                 <li class="menu-item-has-children">
-                                    <a href="#">CEO Message</a>
+                                    <a href="message-ceo.html">CEO Message</a>
                                 </li>
                             </ul>
                         </nav>
@@ -219,14 +219,14 @@
                                     </ul>
                                 </li>
                                 <!-- elements menu -->
-                                <li class="has-mega-menu">
+                                <li class="">
                                     <a href="gallery.html">Gallery</a>
                                 </li>
 
                                 <li class="">
-                                    <a href="javascript:void(0)">CEO Message</a>
+                                    <a href="message-ceo.html">CEO Message</a>
                                 </li>
-                                
+
                             </ul>
                         </nav>
                     </div>
@@ -282,7 +282,7 @@
     <!-- Header area end -->
 
     <!-- Offcanvas area start -->
-     <div class="fix">
+    <div class="fix">
         <div class="offcanvas-area has-theme-deep-blue" data-lenis-prevent>
             <div class="offcanvas-wrapper">
                 <div class="offcanvas-content">
@@ -449,10 +449,12 @@
                     <div class="col-xl-6 col-lg-5">
                         <div class="rs-about-thumb-wrapper">
                             <div class="rs-about-thumb has-large rs-image scroll_reveal reveal_left reveal-active">
-                                <img decoding="async" src="assets/images/mian/shades/02.png" style="border-radius: 20px;"  alt="image">
+                                <img decoding="async" src="assets/images/mian/shades/02.png"
+                                    style="border-radius: 20px;" alt="image">
                             </div>
                             <div class="rs-about-thumb has-small rs-image scroll_reveal reveal_right reveal-active">
-                                <img decoding="async" src="assets/images/mian/shades/04.png" style="border-radius: 20px;" alt="image">
+                                <img decoding="async" src="assets/images/mian/shades/04.png"
+                                    style="border-radius: 20px;" alt="image">
                             </div>
                         </div>
                     </div>
@@ -867,6 +869,58 @@
         </section>
         <!-- services area end -->
 
+
+        <!-- team area start -->
+        <section class="rs-team-area section-space rs-team-one">
+            <div class="container">
+                <div class="row  g-5 section-title-space align-items-center">
+                    <div class="col-xl-7 col-lg-7">
+                        <div class="rs-section-title-wrapper">
+                            <span class="rs-section-subtitle has-theme-orange justify-content-start">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="15" viewBox="0 0 11 15"
+                                    fill="none">
+                                    <path d="M3.14286 10L0 15L8.78104e-07 0L3.14286 5V10Z" fill="#9c0527"></path>
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M6.28571 10L3.14286 15L3.14286 10L4.71428 7.5L3.14286 5L3.14286 0L6.28571 5L6.28571 10ZM6.28571 10L7.85714 7.5L6.28571 5V0L11 7.5L6.28571 15V10Z"
+                                        fill="#9c0527"></path>
+                                </svg>
+                                Our Team
+                            </span>
+                            <h2 class="rs-section-title">The Best Industry Experts</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row g-5">
+                    <div class="col-xl-4 col-lg-4 col-md-6">
+                        <div class="rs-team-item wow fadeInUp" data-wow-delay=".5s" data-wow-duration="1s">
+                            <div class="rs-team-thumb has-clip ">
+                                <a href="about-us.html"> <img src="assets/images/mian/group2.jpg" style="height: 300px;"
+                                        alt="image"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6">
+                        <div class="rs-team-item wow fadeInUp" data-wow-delay=".3s" data-wow-duration="1s">
+                            <div class="rs-team-thumb has-clip ">
+                                <a href="about-us.html"><img src="assets/images/mian/group1.jpg" style="height: 300px;"
+                                        alt="image"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6">
+                        <div class="rs-team-item wow fadeInUp" data-wow-delay=".7s" data-wow-duration="1s">
+                            <div class="rs-team-thumb has-clip ">
+                                <a href="about-us.html"><img src="assets/images/mian/group3.jpg" style="height: 300px;"
+                                        alt="image"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- team area end -->
+
+
         <!-- counter area start -->
         <section class="rs-counter-area rs-counter-one section-space-top has-space p-relative z-index-1">
             <div class="rs-counter-bg-thumb" data-background="assets/images/bg/counter-bg-01.png"></div>
@@ -937,6 +991,8 @@
             </div>
         </section>
         <!-- counter area end -->
+
+
     </main>
     <!-- Body main wrapper end -->
 
