--- a/gallery.html
+++ b/gallery.html
@@ -53,7 +53,7 @@
     <!-- preloader end -->
 
     <!-- Header area start -->
-    <header>
+   <header>
         <div class="rs-header-area rs-header-one has-theme-deep-blue">
             <div class="container-fluid g-0">
                 <div class="rs-header-inner rs-sticky-header" id="rs-sticky-header">
@@ -114,7 +114,7 @@
                                     <a href="gallery.html">Gallery</a>
                                 </li>
                                 <li class="menu-item-has-children">
-                                    <a href="#">CEO Message</a>
+                                    <a href="message-ceo.html">CEO Message</a>
                                 </li>
                             </ul>
                         </nav>
@@ -229,7 +229,7 @@
                                 </li>
 
                                 <li class="">
-                                    <a href="javascript:void(0)">CEO Message</a>
+                                    <a href="message-ceo.html">CEO Message</a>
                                 </li>
 
                             </ul>
